# taipan

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  fibonacci  fibonacci.c  pyproject.toml  test  test.c
.github/actions/install/: action.yml
.github/workflows/: ci-cd.yml
assets/: test.tp
libs/std/: Makefile
libs/std/include/: std.h
libs/std/src/: std.c
scripts/: node_viewer.py
taipan/: __init__.py  __main__.py  _analyzer.py  _compiler.py  _emitter.py  _lexer.py  _parser.py  _visitor.py  analyzer.py  ast.py  compiler.py  emitter.py  exceptions.py  lexer.py  location.py  parser.py  symbol_table.py  visitor.py
taipan/templates/: print.j2
taipan/templates/functions/: __init__.py
tests/: test_analyzer.py  test_lexer.py  test_parser.py  test_symbol_table.py
