[tool.poetry]
name = "taipan"
version = "0.1.0"
description = "Taipan is a simple imperative programming language."
authors = ["Theo Guerin"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8"

[tool.poetry.group.dev.dependencies]
ruff = "^0"
pyright = "^1"
pytest = "^8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]
line-length = 100
